--- a/PropGCC_Demos/SD/Makefile
+++ b/PropGCC_Demos/SD/Makefile
@@ -5,7 +5,8 @@ PRJ = SD_Demo
 NAME = $(PRJ)
 OBJS = $(PRJ).o sd.o spi.o spi_as.o
 BOARD = QUICKSTART
-MODEL = lmm
+MODEL = cmm
+CFLAGS = 
 
 all: $(NAME).elf
 
