--- a/PropGCC_Demos/SD/Makefile
+++ b/PropGCC_Demos/SD/Makefile
@@ -3,7 +3,7 @@ PRJ = SD_Demo
 NAME = $(PRJ)
 OBJS = $(PRJ).o sd.o spi.o spi_as.o
 BOARD = QUICKSTART
-MODEL = lmm
+MODEL = cmm
 CFLAGS = -Os
 
 all: $(NAME).elf
