Edit makefiles to be more portable; Add README content/docs

--- a/PropGCC_Demos/SD/.cproject
+++ b/PropGCC_Demos/SD/.cproject
@@ -24,8 +24,8 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.503621448" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.1119614588" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.1639176457" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.include.paths.2080628880" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="/home/david/Desktop/Kits/Embedded/Parallax/Library"/>
+								<option id="gnu.c.compiler.option.include.paths.2080628880" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/home/david/Desktop/Kits/Embedded/Parallax/Library/PropWare"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.212528581" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
