SD demo works again - it will serve well enough as a unit test of SPI

--- a/PropGCC_Demos/MCP300x/.cproject
+++ b/PropGCC_Demos/MCP300x/.cproject
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?>
+
+<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.config.gnu.cross.exe.debug.59789364">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.cross.exe.debug.59789364" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -24,8 +26,8 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.240281499" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.997423832" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.190829299" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.include.paths.1044544637" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="/home/david/Desktop/Kits/Embedded/Parallax/Library/PropWare"/>
+								<option id="gnu.c.compiler.option.include.paths.1044544637" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/home/david/PropWare"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1832655722" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
