--- a/PropGCC_Demos/SPI/Makefile
+++ b/PropGCC_Demos/SPI/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Os
 PRJ = SPI_Demo
 
 NAME = $(PRJ)
-OBJS = $(PRJ).o spi.o spi_as.o
+OBJS = $(PRJ).o spi.o spi_as.o PropWare.o
 BOARD = QUICKSTART
 MODEL = lmm
 
