--- a/PropGCC_Demos/HD44780/Makefile
+++ b/PropGCC_Demos/HD44780/Makefile
@@ -1,14 +1,14 @@
 CFLAGS = -Os
 
-PRJ = MCP300x_Demo
+PRJ = HD44780_Demo
 
 NAME = $(PRJ)
-OBJS = $(PRJ).o mcp300x.o spi.o spi_as.o PropWare.o
+OBJS = $(PRJ).o hd44780.o PropWare.o
 BOARD = QUICKSTART
 MODEL = lmm
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
-PROPWARE_PATH = /home/david/External/Kits/Embedded/Parallax/Library/PropWare
+PROPWARE_PATH = /home/david/PropWare
 
 # Optionally, specify where your compiler is installed
 PREFIX = /opt/parallax
