Simplify .gitignore tremendously

--- a/.gitignore
+++ b/.gitignore
@@ -5,22 +5,14 @@ objects.mk
 sources.mk
 subdir.mk
 makefile
-PropGCC_Demos/SD/sd.c
-PropGCC_Demos/SD/sd.h
-PropGCC_Demos/SD/spi.c
-PropGCC_Demos/SD/spi.h
-PropGCC_Demos/SD/spi_as.S
-PropGCC_Demos/SD/gpio.h
-PropGCC_Demos/SPI/spi.c
-PropGCC_Demos/SPI/spi.h
-PropGCC_Demos/SPI/spi_as.S
-PropGCC_Demos/MCP300x/.gitignore
 PropGCC_Demos/MCP300x/MCP300x_Datasheet.pdf
-PropGCC_Demos/MCP300x/mcp300x.c
-PropGCC_Demos/MCP300x/mcp300x.h
-PropGCC_Demos/MCP300x/spi.c
-PropGCC_Demos/MCP300x/spi.h
-PropGCC_Demos/MCP300x/spi_as.S
+PropGCC_Demos/**/PropWare.*
+PropGCC_Demos/**/spi.*
+PropGCC_Demos/**/spi_as.S
+PropGCC_Demos/**/sd.*
+PropGCC_Demos/**/mcp300x.*
+PropGCC_Demos/**/hd44780.*
+PropGCC_Demos/**/l3g.*
 **~
 /.cproject
 /.project
