Add support for MAX6675 (thermocouple ADC/sensor)

--- a/PropGCC_Demos/HD44780/.cproject
+++ b/PropGCC_Demos/HD44780/.cproject
@@ -25,7 +25,8 @@
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.243372089" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.1619411755" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.278330711" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="/home/david/PropWare"/>
+									<listOptionValue builtIn="false" value="/home/david/External/Kits/Embedded/Parallax/Library/PropWare"/>
+									<listOptionValue builtIn="false" value="/home/david/reusable/SimpleIDE-0-9-40/parallax/propeller-elf/include"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.735773429" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
