--- a/PropGCC_Demos/MCP300x/.cproject
+++ b/PropGCC_Demos/MCP300x/.cproject
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?>
-
-<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.config.gnu.cross.exe.debug.59789364">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.cross.exe.debug.59789364" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -20,14 +18,15 @@
 					<folderInfo id="cdt.managedbuild.config.gnu.cross.exe.debug.59789364." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.cross.exe.debug.1408041723" name="Cross GCC" superClass="cdt.managedbuild.toolchain.gnu.cross.exe.debug">
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.1269580861" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix" value="propeller-elf-" valueType="string"/>
-							<option id="cdt.managedbuild.option.gnu.cross.path.218027340" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path" value="/opt/parallax/bin/" valueType="string"/>
+							<option id="cdt.managedbuild.option.gnu.cross.path.218027340" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path" value="/home/david/reusable/SimpleIDE-0-9-40/parallax/bin" valueType="string"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.targetPlatform.gnu.cross.376582375" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
 							<builder arguments="-f ../Makefile" buildPath="${workspace_loc:/MCP300x_Demo}/Debug" command="make" id="cdt.managedbuild.builder.gnu.cross.836818271" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.240281499" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.997423832" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.190829299" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.1044544637" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="/home/david/PropWare"/>
+									<listOptionValue builtIn="false" value="/home/david/External/Kits/Embedded/Parallax/Library/PropWare"/>
+									<listOptionValue builtIn="false" value="/home/david/reusable/SimpleIDE-0-9-40/parallax/propeller-elf/include"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1832655722" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
