--- a/PropGCC_Demos/MCP300x/Makefile
+++ b/PropGCC_Demos/MCP300x/Makefile
@@ -11,7 +11,7 @@ MODEL = lmm
 PROPWARE_PATH = /home/david/External/Kits/Embedded/Parallax/Library/PropWare
 
 # Optionally, specify where your compiler is installed
-PREFIX = /opt/parallax
+PREFIX = /home/david/reusable/SimpleIDE-0-9-40/parallax
 
 all: $(NAME).elf
 
