Starting the switch to a library file

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ PropGCC_Demos/**/sd.*
 PropGCC_Demos/**/mcp300x.*
 PropGCC_Demos/**/hd44780.*
 PropGCC_Demos/**/l3g.*
+PropGCC_Demos/**/max6675.*
 **~
 /.cproject
 /.project
