--- a/PropGCC_Demos/L3G/Makefile
+++ b/PropGCC_Demos/L3G/Makefile
@@ -7,10 +7,14 @@ MODEL = cmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
-PROPWARE_PATH = /home/david/PropWare
+ifndef PROPWARE_PATH
+	PROPWARE_PATH = /path/to/PropWare
+endif
 
 # Optionally, specify where your compiler is installed
-PREFIX = /opt/parallax
+ifndef PROPGCC_PREFIX
+	PROPGCC_PREFIX = /path/to/compiler/directory  # Default = /opt/parallax
+endif
 
 all: $(NAME).elf
 
