SPI_Demo does not compile - cannot find definitions for SPI members

--- a/PropGCC_Demos/SPI/.cproject
+++ b/PropGCC_Demos/SPI/.cproject
@@ -20,7 +20,7 @@
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.41896443" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix" value="propeller-elf-" valueType="string"/>
 							<option id="cdt.managedbuild.option.gnu.cross.path.1347007046" name="Path" superClass="cdt.managedbuild.option.gnu.cross.path" value="/opt/parallax/bin/" valueType="string"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.targetPlatform.gnu.cross.563313359" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
-							<builder arguments="-f ../Makefile" buildPath="${workspace_loc:/SPI_Lib_gcc}/Debug" command="make" id="cdt.managedbuild.builder.gnu.cross.1949890457" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
+							<builder arguments="-f ../Makefile" buildPath="${workspace_loc:/SPI_Demo}/Debug" command="make" id="cdt.managedbuild.builder.gnu.cross.1949890457" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.1673241748" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.1057105508" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.1509703594" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
