--- a/PropGCC_Demos/SD/Makefile
+++ b/PropGCC_Demos/SD/Makefile
@@ -8,7 +8,7 @@ CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
 ifndef PROPWARE_PATH
-	PROPWARE_PATH = /path/to/PropWare
+	PROPWARE_PATH = ../../..
 endif
 
 # Optionally, specify where your compiler is installed
