--- a/PropGCC_Demos/SD/Makefile
+++ b/PropGCC_Demos/SD/Makefile
@@ -1,9 +1,9 @@
 PRJ = SD_Demo
 
 NAME = $(PRJ)
-OBJS = $(PRJ).o sd.o spi.o spi_as.o PropWare.o
+OBJS = $(PRJ).o
 BOARD = QUICKSTART
-MODEL = cmm
+MODEL = lmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
