Library now officially works; SD card initialization needs fixing

--- a/PropGCC_Demos/HD44780/Makefile
+++ b/PropGCC_Demos/HD44780/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Os
 PRJ = HD44780_Demo
 
 NAME = $(PRJ)
-OBJS = $(PRJ).o hd44780.o PropWare.o
+OBJS = $(PRJ).o
 BOARD = QUICKSTART
 MODEL = lmm
 
