Add xmmc model; Edit example project make files to force Debug folder

--- a/PropGCC_Demos/L3G/Makefile
+++ b/PropGCC_Demos/L3G/Makefile
@@ -17,6 +17,8 @@ ifndef PROPGCC_PREFIX
 	PROPGCC_PREFIX = /path/to/compiler/directory
 endif
 
+dummy := $(shell test -d Debug || mkdir -p Debug)
+
 all: $(NAME).elf
 
 include $(PROPWARE_PATH)/common.mk
