Update .gitignore to reflect cool things about to happen

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,15 @@
 /docs
 /Debug
+/.idea
 **.elf
 **.o
 **.a
+**~
 objects.mk
 sources.mk
 subdir.mk
 makefile
 PropGCC_Demos/MCP300x/MCP300x_Datasheet.pdf
-PropGCC_Demos/**/PropWare.*
-PropGCC_Demos/**/spi.*
-PropGCC_Demos/**/spi_as.S
-PropGCC_Demos/**/sd.*
-PropGCC_Demos/**/mcp300x.*
-PropGCC_Demos/**/hd44780.*
-PropGCC_Demos/**/l3g.*
-PropGCC_Demos/**/max6675.*
-**~
 /.cproject
 /.project
 /SPI_c.c
