Each library file contains the acronym for its memory model

--- a/xmmc/Makefile
+++ b/xmmc/Makefile
@@ -1,5 +1,5 @@
 # Build all source code files within PropWare for easy testing of compilation errors
-PRJ = PropWare
+PRJ = PropWare_xmmc
 
 LIBNAME = $(PRJ)
 OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp300x.o hd44780.o max6675.o
