--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -1,27 +1,44 @@
+ifeq ($(OS), Windows_NT)
+	DIR_DIV=\\\\
+else
+	MKDIR_FLAG=-p
+	DIR_DIV=/
+endif
+
 all:
-	$(shell test -d HD44780/Debug || mkdir -p HD44780/Debug)
-	$(shell test -d L3G/Debug || mkdir -p L3G/Debug)
-	$(shell test -d MAX6675/Debug || mkdir -p MAX6675/Debug)
-	$(shell test -d MCP300x/Debug || mkdir -p MCP300x/Debug)
-	$(shell test -d SD/Debug || mkdir -p SD/Debug)
-	$(shell test -d SPI/Debug || mkdir -p SPI/Debug)
+	$(shell mkdir $(MKDIR_FLAG) HD44780$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C HD44780/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) L3G$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C L3G/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) MAX6675$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C MAX6675/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) MCP300x$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C MCP300x/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) SD$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C SD/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) SPI$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C SPI/Debug -f ../Makefile
 
 clean:
-	$(shell test -d HD44780/Debug || mkdir -p HD44780/Debug)
-	$(shell test -d L3G/Debug || mkdir -p L3G/Debug)
-	$(shell test -d MAX6675/Debug || mkdir -p MAX6675/Debug)
-	$(shell test -d MCP300x/Debug || mkdir -p MCP300x/Debug)
-	$(shell test -d SD/Debug || mkdir -p SD/Debug)
-	$(shell test -d SPI/Debug || mkdir -p SPI/Debug)
+	$(shell mkdir $(MKDIR_FLAG) HD44780$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C HD44780/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) L3G$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C L3G/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) MAX6675$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C MAX6675/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) MCP300x$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C MCP300x/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) SD$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C SD/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) SPI$(DIR_DIV)Debug > nul 2> nul)
 	$(MAKE) -C SPI/Debug -f ../Makefile clean
