--- a/simple/lmm/Makefile
+++ b/simple/lmm/Makefile
@@ -2,88 +2,7 @@
 PRJ = Simple_lmm
 
 LIBNAME = $(PRJ)
-OBJS = serial_rxtx.o \
-    getDec.o \
-    print.o \
-    putStr.o \
-    serial_open.o \
-    fdserial.o \
-    getBin.o \
-    libservoAux.o \
-    printNumber.o \
-    libvgatext.o \
-    doscanf.o \
-    getHex.o \
-    wavplayer.o \
-    simplei2c.o \
-    simpleterm_close.o \
-    writeBinDigits.o \
-    libservo.o \
-    libfdserial.o \
-    adcDCpropab.o \
-    libadcDCpropab.o \
-    dprint.o \
-    ping.o \
-    floatToString.o \
-    servoAux.o \
-    sscan.o \
-    putChar.o \
-    libdacctr.o \
-    stringToFloat.o \
-    writeHexDigits.o \
-    libwavplayer.o \
-    serial_close.o \
-    dacctr.o \
-    putFloat.o \
-    writeFloatPrecision.o \
-    mx2125.o \
-    mstimer.o \
-    writeLine.o \
-    adcDCVpropab.o \
-    libadcACpropab.o \
-    getFloat.o \
-    gets.o \
-    vga.o \
-    putDec.o \
-    putHex.o \
-    putBin.o \
-    getStr.o \
-    putLine.o \
-    dscan.o \
-    libcompass3d.o \
-    getChar.o \
-    writeFloat.o \
-    writeDec.o \
-    vgatext.o \
-    sprint.o \
-    libmstimer.o \
-    writeBin.o \
-    scan.o \
-    compass3d.o \
-    libsimpletools.o \
-    mx2125_accel.o \
-    mx2125_rotate.o \
-    simpleterm.o \
-    adcACpropab.o \
-    writeChar.o \
-    libmx2125.o \
-    libsimpletext.o \
-    libservodiffdrive.o \
-    writeStr.o \
-    libping.o \
-    safe_gets.o \
-    dosprint.o \
-    servodiffdrive.o \
-    writeDecDigits.o \
-    putln.o \
-    writeHex.o \
-    libsimplei2c.o \
-    scanf_getl.o \
-    mx2125_tilt.o \
-    scanf_getf.o \
-    writeStrDigits.o \
-    fdserial_utils.o \
-    servo.o
+include ../simpleObjects.mk
 MODEL = lmm
 CFLAGS = -Os
 
