--- a/Examples/SD/Makefile
+++ b/Examples/SD/Makefile
@@ -8,7 +8,7 @@ PRJ = SD_Demo
 NAME = $(PRJ)
 OBJS = $(PRJ).o
 BOARD = QUICKSTART
-MODEL = cmm
+MODEL = lmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
