Quick example of simple concurrency (no documentation added yet)

--- a/Examples/Makefile
+++ b/Examples/Makefile
@@ -38,6 +38,9 @@ all:
 	
 	$(shell mkdir $(MKDIR_FLAG) SimpleText$(DIR_DIV)Debug $(NULL))
 	$(MAKE) -C SimpleText/Debug -f ../Makefile
+	
+	$(shell mkdir $(MKDIR_FLAG) Concurrency$(DIR_DIV)Debug $(NULL))
+	$(MAKE) -C Concurrency/Debug -f ../Makefile
 
 clean:
 	$(shell mkdir $(MKDIR_FLAG) HD44780$(DIR_DIV)Debug $(NULL))
@@ -66,3 +69,6 @@ clean:
 	
 	$(shell mkdir $(MKDIR_FLAG) SimpleText$(DIR_DIV)Debug $(NULL))
 	$(MAKE) -C SimpleText/Debug -f ../Makefile clean
+	
+	$(shell mkdir $(MKDIR_FLAG) Concurrency$(DIR_DIV)Debug $(NULL))
+	$(MAKE) -C Concurrency/Debug -f ../Makefile clean
