--- a/lmm/Makefile
+++ b/lmm/Makefile
@@ -2,7 +2,8 @@
 PRJ = PropWare_lmm
 
 LIBNAME = $(PRJ)
-OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp300x.o hd44780.o max6675.o
+OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp300x.o hd44780.o max6675.o \
+		safeSpi.o
 BOARD = QUICKSTART
 MODEL = lmm
 CFLAGS = -Os
