--- a/Examples/HD44780/Makefile
+++ b/Examples/HD44780/Makefile
@@ -12,15 +12,11 @@ MODEL = lmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
-ifndef PROPWARE_PATH
-	PROPWARE_PATH = ../../..
-endif
+PROPWARE_PATH ?= ../../..
 
 # Optionally, specify where your compiler is installed
-ifndef PROPGCC_PREFIX
-	# Default = /opt/parallax
-	PROPGCC_PREFIX = /path/to/compiler/directory
-endif
+# Default = /opt/parallax
+PROPGCC_PREFIX ?= /path/to/compiler/directory
 
 all: $(NAME).elf
 
