--- a/Examples/SD/Makefile
+++ b/Examples/SD/Makefile
@@ -8,19 +8,15 @@ PRJ = SD_Demo
 NAME = $(PRJ)
 OBJS = $(PRJ).o
 BOARD = QUICKSTART
-MODEL = cmm
+MODEL = lmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
-ifndef PROPWARE_PATH
-	PROPWARE_PATH = ../../..
-endif
+PROPWARE_PATH ?= ../../..
 
 # Optionally, specify where your compiler is installed
-ifndef PROPGCC_PREFIX
-	# Default = /opt/parallax
-	PROPGCC_PREFIX = /path/to/compiler/directory
-endif
+# Default = /opt/parallax
+PROPGCC_PREFIX ?= /path/to/compiler/directory
 
 all: $(NAME).elf
 
