--- a/PropWare/xmm/Makefile
+++ b/PropWare/xmm/Makefile
@@ -2,7 +2,7 @@
 PRJ = PropWare_xmm
 
 LIBNAME = $(PRJ)
-OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp300x.o hd44780.o max6675.o \
+OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp3000.o hd44780.o max6675.o \
 		safeSpi.o
 BOARD = QUICKSTART
 MODEL = xmm
