--- a/PropWare/lmm/Makefile
+++ b/PropWare/lmm/Makefile
@@ -3,14 +3,14 @@ PRJ = PropWare_lmm
 
 LIBNAME = $(PRJ)
 OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp3000.o hd44780.o max6675.o \
-		safeSpi.o
+		safeSpi.o pin.o port.o
 BOARD = QUICKSTART
 MODEL = lmm
 CFLAGS = -Os
 
 # Insert your own path here - it should be the same directory that contains "common.mk"
 ifndef PROPWARE_PATH
-	PROPWARE_PATH=..
+	PROPWARE_PATH = ..
 endif
 
 # Optionally, specify where your compiler is installed
@@ -19,4 +19,4 @@ ifndef PROPGCC_PREFIX
 	PROPGCC_PREFIX = /path/to/compiler/directory
 endif
 
-include $(PROPWARE_PATH)/common.mk
+include ../../common.mk
