--- a/PropWare/xmm/Makefile
+++ b/PropWare/xmm/Makefile
@@ -3,7 +3,7 @@ PRJ = PropWare_xmm
 
 LIBNAME = $(PRJ)
 OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp3000.o hd44780.o max6675.o \
-		safeSpi.o
+		safeSpi.o pin.o port.o
 BOARD = QUICKSTART
 MODEL = xmm
 CFLAGS = -Os
@@ -19,4 +19,4 @@ ifndef PROPGCC_PREFIX
 	PROPGCC_PREFIX = /path/to/compiler/directory
 endif
 
-include $(PROPWARE_PATH)/common.mk
+include ../../common.mk
