--- a/PropWare/xmmc/Makefile
+++ b/PropWare/xmmc/Makefile
@@ -3,7 +3,7 @@ PRJ = PropWare_xmmc
 
 LIBNAME = $(PRJ)
 OBJS = PropWare.o spi.o spi_as.o sd.o l3g.o mcp3000.o hd44780.o max6675.o \
-		safeSpi.o pin.o port.o
+		pin.o port.o
 BOARD = QUICKSTART
 MODEL = xmmc
 CFLAGS = -Os
