--- a/PropWare/Makefile
+++ b/PropWare/Makefile
@@ -1,10 +1,12 @@
 all:
+	$(MAKE) -C cog
 	$(MAKE) -C cmm
 	$(MAKE) -C lmm
 	$(MAKE) -C xmm
 	$(MAKE) -C xmmc
 
 clean:
+	$(MAKE) -C cog clean
 	$(MAKE) -C cmm clean
 	$(MAKE) -C lmm clean
 	$(MAKE) -C xmm clean
